[package]
name = "party-sign-in"
version = "0.1.0"
edition = "2021"
description = "Offline-first party sign-in desktop app"
license = "MIT"
authors = ["Codex"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.18", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.8"
csv = "1.3"
once_cell = "1.19"
parking_lot = "0.12"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-beta.18", features = [] }
thiserror = "1.0"
dirs = "6.0"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
